[tool.poetry]
name = "hogprof"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tables = "^3.9.1"
pyoma = "^0.12.1"
pandas = "^2.1.1"
h5py = "^3.9.0"
ete3 = "^3.1.3"
pyham = "^1.1.12"
goatools = "^1.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
