[build-system]
requires = ["setuptools>=61.0"]


build-backend = "setuptools.build_meta"
[project]
name = "HogProf"
dynamic = ["entry-points"]
version = "0.0.9"
authors = [
  { name="Dave Moi", email="dmoi@unil.ch" },
]
dependencies = ["biopython",
"certifi",
"chardet",
"datasketch",
"ete3",
"future",
"goatools",
"h5py",
"idna",
"lxml",
"numexpr",
"numpy",
"pandas",
"pyham>=1.1.10",
"pyoma",
"pyopa",
"python-dateutil",
"pytz",
"requests",
"scipy",
"six",
"tables",
"urllib3",
"tqdm"
]
description = "Phylogenetic Profiling with OMA and minhashing"
readme = "README.md"

license = { file="LICENSE" }

requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/DessimozLab/HogProf"
"Bug Tracker" = "https://github.com/DessimozLab/HogProf/issues"
"Docs" = "https://dessimozlab.github.io/HogProf/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]